--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <>
   <header>
-    <!-- Contenedor del logo -->
     <div class="logo-container">
-      <img src="logo.jpg" alt="Logo for IA Courses Barcelona featuring a stylized circuit board icon and the text IA Courses Barcelona in blue, conveying a modern and professional tone related to artificial intelligence education" class="logo">
-    </div>
+    <img src="logo.jpg" alt="Logo" class="logo">
+  </div>
 
     <!-- Texto centrado -->
     <div class="overlay">
       <h1>CURSO DE INTELIGENCIA ARTIFICIAL</h1><br>
+      <img src="logo.jpg" alt="Logo" class="logo overlay-logo">
       <h2>Descubre el futuro con IA: aprende desde cero hasta experto.</h2>
     </div>
   </header>
@@ -52,3 +52,5 @@
 
    <script src="script.js"></script>
 </html>
+
+
